nginx/overlays/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: nginx
          image: "nginx:1.20.1-alpine"
          volumeMounts:
          - name: default-configuration
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 100m
              memory: 64M
      volumes:
        - name: default-configuration
          configMap:
            name: default-configuration
