nginx/overlays/dev/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  annotations: {}
spec:
  podSelector:
    matchLabels:
      application: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              environment: dev
      ports:
        - protocol: TCP
          port: 80
  egress:
    - {}
